--- a/app/src/main/res/layout/dialog_edit_query.xml
+++ b/app/src/main/res/layout/dialog_edit_query.xml
@@ -17,7 +17,7 @@
             android:id="@+id/editor_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Title"
+            android:hint="@string/title"
             android:singleLine="true"
             />
     </android.support.design.widget.TextInputLayout>
@@ -32,7 +32,7 @@
             android:id="@+id/editor_query"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Query"
+            android:hint="@string/query"
             android:inputType="textWebEditText"
             android:singleLine="true"
             />
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:text="ADD"
+        android:text="@android:string/ok"
         android:layout_gravity="end"/>
 
 </LinearLayout>
