--- a/app/src/main/res/values/material_icon_strings.xml
+++ b/app/src/main/res/values/material_icon_strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string translatable="false" name="material_icon_github">&#xf345;</string>
+    <string translatable="false" name="material_icon_trending_up">&#xf310;</string>
+
     <string translatable="false" name="material_icon_settings">&#xf1c6;</string>
     <string translatable="false" name="material_icon_logout">&#xf1af;</string>
 </resources>
