--- a/app/src/main/res/layout/side_nav.xml
+++ b/app/src/main/res/layout/side_nav.xml
@@ -38,6 +38,14 @@
             /-->
 
         <io.github.yusukeiwaki.githubviewer2.widget.SideMenuItemView
+            android:id="@+id/nav_item_feedback"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:materialIcon="@string/material_icon_feedback"
+            android:title="@string/feedback"
+            />
+
+        <io.github.yusukeiwaki.githubviewer2.widget.SideMenuItemView
             android:id="@+id/nav_item_logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
