try data-binding

--- a/app/src/main/res/layout/home_screen.xml
+++ b/app/src/main/res/layout/home_screen.xml
@@ -1,47 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:id="@+id/add_query_involves_me"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
-        android:orientation="vertical"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:padding="16dp">
+<layout xmlns:bind="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="user"
+            type="io.github.yusukeiwaki.githubviewer2.model.User"/>
+    </data>
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/add_query_involves_me"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-            <io.github.yusukeiwaki.githubviewer2.widget.MaterialFontTextView
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="16dp">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/material_icon_github"
-                android:textSize="32dp"/>
-            <io.github.yusukeiwaki.githubviewer2.widget.MaterialFontTextView
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+                <io.github.yusukeiwaki.githubviewer2.widget.MaterialFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/material_icon_github"
+                    android:textSize="32dp"/>
+                <io.github.yusukeiwaki.githubviewer2.widget.MaterialFontTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/material_icon_trending_up"
+                    android:textSize="32dp"
+                    android:layout_margin="8dp"/>
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:scaleType="centerCrop"
+                    bind:userAvatarUrl="@{user.avatar_url}"/>
+            </LinearLayout>
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="16dp" />
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/material_icon_trending_up"
-                android:textSize="32dp"
-                android:layout_margin="8dp"/>
-            <ImageView
-                android:id="@+id/current_user_avatar"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:scaleType="centerCrop"/>
+                android:text="@string/caption_add_query_involves_me"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
         </LinearLayout>
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="16dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/caption_add_query_involves_me"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-    </LinearLayout>
-</FrameLayout>
+    </FrameLayout>
+</layout>
