--- a/app/src/main/res/layout/list_item_issue.xml
+++ b/app/src/main/res/layout/list_item_issue.xml
@@ -1,108 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:foreground="?attr/selectableItemBackground"
-    android:layout_margin="8dp">
-
-    <LinearLayout
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="issue"
+            type="io.github.yusukeiwaki.githubviewer2.model.Issue"/>
+        <import type="android.text.TextUtils"/>
+        <import type="android.view.View"/>
+    </data>
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:foreground="?attr/selectableItemBackground"
+        android:layout_margin="8dp"
+        app:cardBackgroundColor='@{"closed".equals(issue.state) ? 0xffC6C6C6 : 0xffE7F6DF}'>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
-                android:layout_marginTop="8dp"
-                tools:text="あたまがおかしい"/>
+                android:padding="16dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
+                    android:layout_marginTop="8dp"
+                    android:text="@{issue.title}"/>
 
-            <TextView
-                android:id="@+id/repo_title"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="?android:attr/textColorSecondary"
+                    android:text="@{issue.repositoryName}"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="0px"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                        android:textColor="?android:attr/textColorSecondary"
+                        android:text='@{"#" + issue.number}'/>
+
+                    <io.github.yusukeiwaki.githubviewer2.widget.MyFontTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginEnd="4dp"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                        android:textColor="?android:attr/textColorSecondary"
+                        android:text="@{TextUtils.isEmpty(issue.pull_request) ? @string/my_font_issue : @string/my_font_pull_request}"
+                        android:enabled="false"/>
+                </LinearLayout>
+            </LinearLayout>
+            <io.github.yusukeiwaki.githubviewer2.widget.DividerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:textColor="?android:attr/textColorSecondary"
-                tools:text="RocketChat/Rocket.Chat.Android"/>
-
+                android:layout_height="wrap_content"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:gravity="center_vertical">
-
-                <TextView
-                    android:id="@+id/issue_number"
-                    android:layout_width="0px"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="?android:attr/textColorSecondary"
-                    tools:text="#123"/>
-
+                <include layout="@layout/list_item_issue_user"
+                    bind:user="@{issue.user}"
+                    />
                 <io.github.yusukeiwaki.githubviewer2.widget.MyFontTextView
-                    android:id="@+id/icon"
+                    android:id="@+id/comment_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/my_font_comment"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:visibility="@{issue.comments > 0 ? View.VISIBLE : View.GONE}" />
+                <TextView
+                    android:id="@+id/num_comment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_marginEnd="4dp"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="?android:attr/textColorSecondary"
-                    tools:text="@string/my_font_issue"
-                    android:enabled="false"/>
+                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                    android:text="@{Long.toString(issue.comments)}"
+                    android:visibility="@{issue.comments > 0 ? View.VISIBLE : View.GONE}"/>
+                <Space
+                    android:layout_width="16dp"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
-        </LinearLayout>
-        <io.github.yusukeiwaki.githubviewer2.widget.DividerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-            <ImageView
-                android:id="@+id/user_avatar"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_margin="8dp"
-                android:scaleType="centerInside"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="\@"/>
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                tools:text="YusukeIwaki"/>
-            <io.github.yusukeiwaki.githubviewer2.widget.MyFontTextView
-                android:id="@+id/comment_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/my_font_comment"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
-            <TextView
-                android:id="@+id/num_comment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
-            <Space
-                android:layout_width="16dp"
-                android:layout_height="wrap_content" />
         </LinearLayout>
 
-    </LinearLayout>
 
-
-</android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
+</layout>
