--- a/app/src/main/res/layout/side_nav.xml
+++ b/app/src/main/res/layout/side_nav.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <include layout="@layout/nav_header_main"/>
+        <include
+            android:id="@+id/nav_header_main"
+            layout="@layout/nav_header_main"/>
 
         <LinearLayout
             android:id="@+id/side_query_item_container"
