--- a/app/src/main/res/layout/side_nav.xml
+++ b/app/src/main/res/layout/side_nav.xml
@@ -28,14 +28,14 @@
             android:text="@string/caption_add_search_query"
             style="@style/Widget.AppCompat.Button.Borderless"/>
 
-        <io.github.yusukeiwaki.githubviewer2.widget.DividerView
+        <io.github.yusukeiwaki.android.widget.DividerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <!--io.github.yusukeiwaki.githubviewer.widget.SideMenuItemView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:materialIcon="@string/material_icon_settings"
+            app:materialIcon="@string/zmdi_settings"
             android:title="@string/settings"
             /-->
 
@@ -43,7 +43,7 @@
             android:id="@+id/nav_item_feedback"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:materialIcon="@string/material_icon_feedback"
+            app:materialIcon="@string/zmdi_comment_dots"
             android:title="@string/feedback"
             />
 
@@ -51,7 +51,7 @@
             android:id="@+id/nav_item_logout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:materialIcon="@string/material_icon_logout"
+            app:materialIcon="@string/zmdi_power_off"
             android:title="@string/logout"
             />
 
